# bad-appleify

./: .gitignore  README.md  index.html  package-lock.json  package.json
packer/: Cargo.toml  README.md
packer/src/: lib.rs  main.rs
public/: images.jfif  injector.js
public/Decoder/: README.md  arduino-example.ino  binary-decoder.js  json-base64-decoder.js  json-hex-decoder.js  table-demo.html
src/: RootApp.vue  main.ts  packer.worker.ts  store.ts
src/assets/wasm/: bad_apple_packer.wasm
src/components/: ConfigPanel.vue  DraggablePreview.vue  LoadingBar.vue  StencilTitle.vue  UploadPreviewModal.vue  VideoBackground.vue  VideoControls.vue  VideoProgress.vue
src/composables/: useFrameRenderer.ts  usePlayback.ts
src/router/: index.ts
src/types/: index.ts  index.ts.bak
src/utils/: downloads.ts  formatters.ts  frameRenderer.ts  imageProcessing.ts  upload.ts  wasmLoader.ts
src/views/: HomePage.vue  PreviewPage.vue
