[package]
name = "bad-apple-packer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "bad-appleify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ffmpeg-next = "7.0"
rayon = "1.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
